[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Palette/PaletteContainer.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/dark_themes/palette/edit_palette.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/dark_themes/palette/add_palette.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/dark_themes/palette/remove_palette.png" type="Texture" id=4]
[ext_resource path="res://src/Palette/PaletteImportFileDialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Palette/NewPaletteDialog.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Palette/EditPalettePopup.tscn" type="PackedScene" id=7]

[sub_resource type="ButtonGroup" id=1]

[node name="PalettePanelContainer" type="PanelContainer"]
margin_left = 15.0
margin_top = 261.0
margin_right = 315.0
margin_bottom = 516.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 4
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteVBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PalettesLabel" type="Label" parent="PaletteVBoxContainer"]
margin_right = 286.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Palettes"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PaletteVBoxContainer"]
margin_top = 18.0
margin_right = 286.0
margin_bottom = 50.0

[node name="PaletteButtons" type="HBoxContainer" parent="PaletteVBoxContainer/CenterContainer"]
margin_left = 37.0
margin_right = 248.0
margin_bottom = 32.0

[node name="AddPalette" type="Button" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons" groups=[
"UIButtons",
]]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Add a new palette"
mouse_default_cursor_shape = 2

[node name="PopupMenu" type="PopupMenu" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons/AddPalette"]
margin_right = 115.0
margin_bottom = 54.0
items = [ "New Empty Palette", null, 0, false, false, 0, 0, null, "", false, "Import Palette", null, 0, false, false, 1, 0, null, "", false, "Create Palette From Current Sprite", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons/AddPalette"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditPalette" type="Button" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons" groups=[
"UIButtons",
]]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Edit currently selected palette"
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons/EditPalette"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemovePalette" type="Button" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons" groups=[
"UIButtons",
]]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
hint_tooltip = "Remove currently selected palette"
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons/RemovePalette"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -12.0
margin_right = 12.0
margin_bottom = 12.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteOptionButton" type="OptionButton" parent="PaletteVBoxContainer/CenterContainer/PaletteButtons"]
margin_left = 108.0
margin_right = 211.0
margin_bottom = 32.0
grow_horizontal = 0
rect_min_size = Vector2( 103, 0 )
hint_tooltip = "Choose a palette"
mouse_default_cursor_shape = 2
clip_text = true

[node name="ScrollPalette" type="ScrollContainer" parent="PaletteVBoxContainer"]
margin_top = 54.0
margin_right = 286.0
margin_bottom = 241.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterPalette" type="CenterContainer" parent="PaletteVBoxContainer/ScrollPalette"]
margin_right = 286.0
size_flags_horizontal = 3

[node name="PaletteContainer" type="GridContainer" parent="PaletteVBoxContainer/ScrollPalette/CenterPalette"]
margin_left = 143.0
margin_right = 143.0
size_flags_horizontal = 3
columns = 10
script = ExtResource( 1 )

[node name="DummyBtn" type="Button" parent="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer"]
visible = false
margin_right = 12.0
margin_bottom = 20.0
group = SubResource( 1 )
text = "Dummy"

[node name="NewPaletteDialog" parent="." instance=ExtResource( 6 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 380.0
margin_bottom = 77.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="PaletteImportFileDialog" parent="." instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 507.0
margin_bottom = 307.0
current_dir = "/home/luiq/data/libDev/git/Pixelorama"
current_path = "/home/luiq/data/libDev/git/Pixelorama/"

[node name="EditPalettePopup" parent="." instance=ExtResource( 7 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 607.0
margin_bottom = 577.0
[connection signal="pressed" from="PaletteVBoxContainer/CenterContainer/PaletteButtons/AddPalette" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="_on_AddPalette_pressed"]
[connection signal="pressed" from="PaletteVBoxContainer/CenterContainer/PaletteButtons/EditPalette" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="on_edit_palette"]
[connection signal="pressed" from="PaletteVBoxContainer/CenterContainer/PaletteButtons/RemovePalette" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="_on_RemovePalette_pressed"]
[connection signal="item_selected" from="PaletteVBoxContainer/CenterContainer/PaletteButtons/PaletteOptionButton" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="_on_PaletteOptionButton_item_selected"]
[connection signal="confirmed" from="NewPaletteDialog" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="on_new_palette_confirmed"]
[connection signal="popup_hide" from="NewPaletteDialog" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="_on_NewPaletteDialog_popup_hide"]
[connection signal="file_selected" from="PaletteImportFileDialog" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="on_palette_import_file_selected"]
[connection signal="popup_hide" from="PaletteImportFileDialog" to="PaletteVBoxContainer/ScrollPalette/CenterPalette/PaletteContainer" method="_on_NewPaletteDialog_popup_hide"]
